<resources>
    <string name="app_name">Parking Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="location">Location</string>

    <string name="current_location">Current Location</string>
    <string name="custom_location">Custom Location</string>
    <string name="current_custom_location">Current/Custom Location</string>
    <string name="find_parking_button">Find Parking Spot</string>
    <string name="click_to_find_parking">Click to Find Parking</string>
    <string name="google_maps_view">Google Maps View</string>
    <string name="zoom_in">zoom_in</string>
    <string name="zoom_out">zoom_out</string>
    <string name="find_parking_places">find parking places</string>
    <string name="welcome_to_our_parking_app">Welcome to our Parking App!</string>
</resources>