<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_our_parking_app"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please select your location options below:"
        android:textSize="16sp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/locationSwitchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/descriptionText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_custom_location"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/locationSwitch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textOff="@string/current_location"
            android:textOn="@string/custom_location" />
    </LinearLayout>

    <!-- Custom Location Inputs (Initially Invisible) -->
    <EditText
        android:id="@+id/customLocation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:hint="@string/location"
        android:autofillHints="text location or latitude/longitude"
        android:visibility="invisible" />

    <!-- Spinner and Button -->
    <Spinner
        android:id="@+id/spinnerMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:entries="@array/vehicle_types" />

    <Button
        android:id="@+id/findParkingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/find_parking_button"
        android:textSize="19sp"
        android:textStyle="bold" />

    <!-- Add any other views you have here -->

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>