<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:scrollbars="horizontal"
        android:verticalScrollbarPosition="defaultPosition"
        android:contentDescription="@string/google_maps_view"
        android:labelFor="@id/mapView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/zoomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/zoomInButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_add"
            android:contentDescription="@string/zoom_in" />

        <ImageButton
            android:id="@+id/zoomOutButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_remove"
            android:contentDescription="@string/zoom_out"
            android:layout_marginTop="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/findParkingButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/find_parking_places"
            android:clickable="false"
            android:src="@drawable/ic_nearby_parking">


        </ImageButton>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>